# vitm

./: .gitignore  Procfile  pyproject.toml  requirements.txt  supervisor.conf
collector/: collector.py  config.py  db.py  telegram_collector.py
main/: analize.py  app.py  app_new.py  gradio_timeline.py  plotly_timeline.py
ui/: app.py  db.py
