[tool.poetry]
name = "vitm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
telethon = "^1.41.2"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
